# unix-system-programming-uts

./: .gitignore  examples.txt  pyproject.toml  summary-lecture.md  summary.md
Summaries/: python-summary.md  unix-cheat-sheet.md  unix-lecture-summary.md  unix-summary.md
assignment/: locale.py  locale_1.py  locale_old.py  my_locale.py  test.py  test_locale.py
assignment/data/: full_argument_file.csv  html_argument_file.html  language_specific_argument_file.csv  locale_charmap_mixed.csv  test_argument_file.csv  test_argument_file_3  test_argument_file_no_charmaps.csv  test_argument_file_no_locales.csv
exercises/grep/exercises/week3/: Unix 3 - Piping and Redirections.md
exercises/grep/exercises/week4/: Unix 3 - GREP.md
exercises/python/: ex1.2.py  ex1.3.py  ex1.4.py  l3_events.py  l3_lookup_table.py  l4_functions.py  l4_lookup_table_enhanced.py  lists.py
exercises/python/lecture_examples_2/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py
exercises/python/re/: findall.py  flags_re.py  match.py  raw_strings.py  re_caret.py  re_dot.py  re_escape_fail.py  re_escape_question_mark.py  re_escape_slash.py  re_escape_slash_2.py  re_escpae_extract_group.py  re_ex1.py  re_ex2.py  re_ex3.py  re_ex4.py  re_ex5.py  re_nicolas_stuid.py  re_or.py  re_range.py  re_repeat.py  re_words.py  re_words_2.py  search.py  strings.py  sub.py
exercises/python/snippets/: .bash_history  .python_history  filetypes.py  func.py  numbers.py  readin.py  regex.py  test.py
exercises/week2/: Unix 2 - Scripting basics.md  exercises.md
exercises/week4/: Unix 3 - GREP.md
